# Trabalho-Individual-2022-2--Ricardo

./: README.md  docker-compose.yml
.github/workflows/: main.yml
Sphinx/: conf.py  index.rst
Sphinx/_build/doctrees/: environment.pickle  index.doctree
Sphinx/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
Sphinx/_build/html/_static/: documentation_options.js
documentation/: Doxyfile
documentation/html/: index.html
documentation/xml/: Doxyfile.xml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
poetry/: README.md  pyproject.toml
src/: dockerfile
tests/data_pipeline/feature_engineering/: key_smash_test.py
tests/data_pipeline/pre_processing/: concatenate_columns_tests.py
