[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Ricardo Loureiro <ricardoloureiro75@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_trabalho"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
